--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "version": "1.0.0",
     "description": "this is the server side",
     "main": "server.js",
+    "type":"module",
     "scripts": {
         "start": "node backend/server.js",
         "server": "nodemon backend/server.js",
@@ -12,6 +13,7 @@
     "author": "Gustavo Cruz",
     "license": "ISC",
     "dependencies": {
+        "dotenv": "^8.2.0",
         "express": "^4.17.1"
     },
     "devDependencies": {
