--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "version": "1.0.0",
     "description": "this is the server side",
     "main": "server.js",
-    "type":"module",
+    "type": "module",
     "scripts": {
         "start": "node backend/server.js",
         "server": "nodemon backend/server.js",
@@ -13,8 +13,10 @@
     "author": "Gustavo Cruz",
     "license": "ISC",
     "dependencies": {
+        "colors": "^1.4.0",
         "dotenv": "^8.2.0",
-        "express": "^4.17.1"
+        "express": "^4.17.1",
+        "mongoose": "^5.11.15"
     },
     "devDependencies": {
         "concurrently": "^5.3.0",
